Hahmon lisays melkein valmis, hahmon poisto ja character sheet toimii

--- a/templates/newC1.html
+++ b/templates/newC1.html
@@ -1,7 +1,7 @@
 <title>Etusivu</title>
 <h1>5th Edition Character Sheet</h1>
 
-<form action="/add" method="POST">
+<form action="/newC2" method="POST">
     Name:
     <p>
     <input type="text" name="name">
@@ -28,6 +28,6 @@
     <input type="text" name="level" value="1">
     <p>
     <br>
-    <input type="submit" value="Create new character">
+    <input type="submit" value="Next step">
     </form>
     
