--- a/templates/party.html
+++ b/templates/party.html
@@ -3,8 +3,8 @@
 <p>
 <ul>
     {% for hahmo in hahmot %}
-    <li>{{hahmo}}
+    <li><a href="/hahmo/{{hahmo[0]}}"> {{hahmo}}</a>
     {% endfor %}
 </ul>
-<a href="/newC">Add a new memeber</a>
+<a href="/newC1">Add a new memeber</a>
 <a href="/removeC">Remove a memeber</a>
