--- a/templates/newC1.html
+++ b/templates/newC1.html
@@ -1,7 +1,7 @@
 <title>Etusivu</title>
 <h1>5th Edition Character Sheet</h1>
 
-<form action="/newC2" method="POST">
+<form action="/add" method="POST">
     Name:
     <p>
     <input type="text" name="name">
