--- a/templates/frontPage.html
+++ b/templates/frontPage.html
@@ -11,7 +11,7 @@
     <li><a href="/hahmo/{{hahmo[0]}}"> {{hahmo[1]}}</a>
     {% endfor %}
 </ul>
-<a href="/newC1">Add a new memeber</a>
+<a href="/newC">Add a new memeber</a>
 <a href="/removeC">Remove a memeber</a>
 {% else %}
 <form action="/login" method="POST">
